--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
-server.tomcat.additional-tld-skip-patterns=*.jar
-# hk2-utils.jar,javax.annotation-api.jar,javax.inject.jar,hk2-api.jar,config-types.jar,hk2-core.jar,hk2-config.jar,tiger-types.jar,validation-api.jar,jboss-logging.jar,classmate.jar,hk2-locator.jar,javassist.jar,hk2-runlevel.jar,class-model.jar,asm-all-repackaged.jar
+server.tomcat.additional-tld-skip-patterns=hk2-utils.jar,javax.annotation-api.jar,javax.inject.jar,hk2-api.jar,config-types.jar,hk2-core.jar,hk2-config.jar,tiger-types.jar,validation-api.jar,jboss-logging.jar,classmate.jar,hk2-locator.jar,javassist.jar,hk2-runlevel.jar,class-model.jar,asm-all-repackaged.jar
+
 #DATA SOURCE I BAZA DANYCH
 spring.datasource.url=jdbc:mysql://localhost:3306/DataBase
 spring.datasource.username=root
