--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,21 +14,25 @@ spring.datasource.username=root
 spring.datasource.password=kopytko
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
-#spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
 #HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dll-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 #SPRING SECURITY
 spring.queries.users-query=select email, password, active from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+
 #INTERNACJOLIZACJA
 spring.messages.always-use-message-format=false
 spring.messages.basename=messages
 spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
 spring.messages.fallback-to-system-locale=true
+
 #LOGGING
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
